--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,16 +1,28 @@
 name: Deploy Dev
 on: 
-  push:
+  pull_request:
     branches:
       - 'develop'
+    types:
+      - 'closed'
 env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
 
 jobs:
+
+  check_merge_and_run:
+    name: 'Validate Merge'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check if PR is merged
+        if: github.event.pull_request.merged == true
+        run: echo "Pull request was merged into '${{ github.event.pull_request.base.ref }}'. Workflow triggered!"
   
   terraform_apply:
     name: Deploy Dev
+    needs: 
+      - check_merge_and_run
     runs-on: ubuntu-latest
     defaults:
       run:
