--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -9,14 +9,16 @@ env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
 jobs:
-  
+
   check_merge_and_run:
     name: 'Validate Merge'
     runs-on: ubuntu-latest
     steps:
       - name: Check if PR is merged
-        if: github.event.pull_request.merged == true
-        run: echo "Pull request was merged into '${{ github.event.pull_request.base.ref }}'. Workflow triggered!"
+        if: github.event.pull_request.merged != true
+        run: exit 1
+      - name: Proceed if PR is merged
+        run: echo "✅ Pull request was merged. Continuing workflow..."
   
   terraform_apply:
     name: Terraform Apply
