--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -5,53 +5,12 @@ on:
       - 'develop'
     types:
       - 'closed'
-env:
-  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-
 jobs:
-
-  check_merge_and_run:
-    name: 'Validate Merge'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check if PR is merged
-        if: github.event.pull_request.merged != true
-        run: exit 1
-      - name: Proceed if PR is merged
-        run: echo "✅ Pull request was merged. Continuing workflow..."
-  
-  terraform_apply:
-    name: Deploy Dev
-    needs: 
-      - check_merge_and_run
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-    - name: Terraform Apply
-      run: |
-        terraform init \
-          -backend-config="bucket=landigu-tf-remote-state" \
-          -backend-config="key=banyan-crm/${{vars.PROJECT_NAME}}/terraform.tfstate" \
-          -backend-config="region=sa-east-1"
-        terraform workspace select dev || terraform workspace new dev
-        terraform apply -auto-approve -var-file="infra/dev/parameters.tfvars"
-    
-  pull_request:
-    name: Pull Request
-    runs-on: ubuntu-latest
-    needs:
-      - terraform_apply
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Create Pull Request To main
-        run: gh pr create -B main -H develop --title 'Merge develop into main' --body 'Created by Github action'
-        continue-on-error: true
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
+  call_reusable_workflow:
+    uses: gustavolandi/terraform-actions/.github/workflows/deploy-dev.yml@main
+    with:
+      TF_STATE_BUCKET_NAME: ${{vars.TF_STATE_BUCKET_NAME}}
+      TF_STATE_KEY_PATH: ${{vars.TF_STATE_KEY_PATH}}
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
