--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -5,38 +5,12 @@ on:
       - 'main'
     types:
       - closed
-env:
-  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
 jobs:
-
-  check_merge_and_run:
-    name: 'Validate Merge'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check if PR is merged
-        if: github.event.pull_request.merged != true
-        run: exit 1
-      - name: Proceed if PR is merged
-        run: echo "✅ Pull request was merged. Continuing workflow..."
-  
-  terraform_apply:
-    name: Terraform Apply
-    needs: 
-      - check_merge_and_run
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-    - name: Terraform Apply
-      run: |
-        terraform init \
-          -backend-config="bucket=landigu-tf-remote-state" \
-          -backend-config="key=banyan-crm/${{vars.PROJECT_NAME}}/terraform.tfstate" \
-          -backend-config="region=sa-east-1"
-        terraform validate
-        terraform workspace select prod || terraform workspace new prod
-        terraform apply -auto-approve -var-file="infra/prod/parameters.tfvars"
+  call_reusable_workflow:
+    uses: gustavolandi/terraform-actions/.github/workflows/deploy-prod.yml@main
+    with:
+      TF_STATE_BUCKET_NAME: ${{vars.TF_STATE_BUCKET_NAME}}
+      TF_STATE_KEY_PATH: ${{vars.TF_STATE_KEY_PATH}}
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
