--- a/.github/workflows/validate-to-deploy-dev.yml
+++ b/.github/workflows/validate-to-deploy-dev.yml
@@ -4,40 +4,13 @@ on:
     branches:
       - 'feature/*'
       - 'bugfix/*'
-env:
-  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+
 jobs:
-  terraform_validate:
-    name: Terraform Validate
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-    - name: Terraform Plan
-      run: |
-        terraform init \
-          -backend-config="bucket=landigu-tf-remote-state" \
-          -backend-config="key=banyan-crm/${{vars.PROJECT_NAME}}/terraform.tfstate" \
-          -backend-config="region=sa-east-1"
-        terraform validate
-        terraform workspace select dev || terraform workspace new dev
-        terraform plan -var-file="infra/dev/parameters.tfvars"
-  
-  pull_request:
-    name: Pull Request
-    runs-on: ubuntu-latest
-    needs:
-      - terraform_validate
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Create Pull Request To main
-        run: gh pr create -B main -H develop --title 'Merge develop into main' --body 'Created by Github action'
-        continue-on-error: true
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
+  call_reusable_workflow:
+    uses: gustavolandi/terraform-actions/.github/workflows/validate-to-deploy-dev.yml@main
+    with:
+      TF_STATE_BUCKET_NAME: ${{vars.TF_STATE_BUCKET_NAME}}
+      TF_STATE_KEY_PATH: ${{vars.TF_STATE_KEY_PATH}}
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
